Progression 0.6.0
  Add Player Wake Up Trigger
  Add Attack Entity Trigger
  Add XP Condition
  Add XP Reward
  Add Set on Fire Reward
  Add Last Killed Entity Filter
  Add Last Hit Entity Filter
  Add Everyone Online Entity Filter
  Add Tool Class Item FIlter
  Add Target Filters for Hurt, Potion Effect and Teleport
  Add Option for Randomising Number of Entities Spawned or Number of Items Given
  Add Entity Name Dump /progression entities
  Add Potion Name Dump /progression potions
  Fix Spawn Item Stack Size

Progression 0.5.2
  Add Achievements Command

Progression 0.5.1
  Fixed Tinkers Construct Worktable not being able to be opened at all
  Added options to disable asm, in case a specific mod is erroring
  Fix Potential packet error when loading a world

Progression 0.5.0
  Updated to Minecraft 1.8.9 / Minecraft 1.9
  Craft Locking currently supports Thaumcraft 5, Tinkers Construct 2 and Vanilla
  Internals were rewritten so any data written in 1.7.10 is pretty much guaranteed NOT to work
  Rewrote the guis, to have two modes edit and display modes
  Increased shift + right arrow to move 100 spaces, and scroll wheel to move 50, making scrolling quicker
  Changed items to use filters instead of selecting all individually
  Added Support for displaying criteria, and claiming rewards with Enchiridion Books (And more)
    (ENCHIRIDION): Added Hide/Show Book Layer Reward
    (ENCHIRIDION): Add Open Book Gui Reward (Could make blocks open your gui?)
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Criteria Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Tasks Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Points Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Rewards Feature
    (ENCHIRIDION:BOOKS:FEATURES): Added Display Tabs Feature
    (ENCHIRIDION:BOOKS:ACTIONS):  Added Claim Specific Reward Action
    (ENCHIRIDION:BOOKS:ACTIONS):  Added Complete Criteria Action
  Added ability to create and join teams