@@ -1,4 +1,5 @@
 Progression 0.6.0
+  Be careful with updating, you might need to redo any damage, potion effect or teleport events because of changes
   Add Player Wake Up Trigger
   Add Attack Entity Trigger
   Add XP Condition
